v3.0a.022:
- Merge the following changes to the CP version 
- Added Replay mode to Offline Menu
- Added match results to main menu
- Fixed issue with PS4 stick button mappings

v3.0a.020b (unofficial):
- Fixed a bug that caused a crash on rollback (Steam version only)

v3.0a.020a (unofficial):
- Fixed a bug that FPS might become unstable in training mode or vs mode.
  (Only Steam version)

v3.0a.020 (unofficial):
- Fixed auto updater not updating game.
- Fixed desyncs caused by the FPU state not being restored on rollback.
  (Credit to Mizunashi for the fix)

v3.0a.019 (unofficial):
- Fixed a bug that caused the game to crash sometimes in maids mirrors and matches with Hime.
- Fixed text bugging out on Windows 10 after starting the game.

v3.0.018:
- Fix "Could not create process [193]" launcher error.
- Fix crash during game start when controller is plugged in or disconnected.

v3.0.017:
- Fix tournament mode getting stuck for other offline modes.

v3.0.016:
- Added held start button for offline versus, default is 1.5 seconds, can be changed.
- Added tournament mode for offline, forces 2 round games and 1.5 second start button.
- Added a stick only shortcut to show the overlay menu:
  Hold any 3 buttons and press any direction during character select.
- Fixed blank startup bug on Wine.
- Fixed possible crash on disconnect.

v3.0.015:
- Fixed the super flash overlay glitch on the boss stages.
- Fixed the bug that shows the color select after pressing F4.
- Added an option to view changes before updating.

v3.0.014:
- Fixed alt-enter crash.

v3.0.013:
- Fixed keyboard controls on Linux.
- Fixed bug where you can attack before round start in offline versus.
- Included Erkz stage select graphics fix.

v3.0.012:
- Prevent computer from sleeping or showing screensaver while the game is running.
  (Doesn't work if you use the screensaver option: "On resume, display login screen")
- Fixed the issue where the game doesn't work if it takes too long to startup.