@@ -685,6 +685,14 @@ void NetplayManager::setInput ( uint8_t player, uint16_t input )
     {
         _inputs[player - 1].set ( getIndex() - _startIndex, getFrame(), input );
     }
+    else if (config.mode.isOffline() && isSplitDelay()) {
+        if (player == 1) {
+            _inputs[player - 1].set(getIndex() - _startIndex, getFrame() + config.delay, input);
+        }
+        else {
+            _inputs[player - 1].set(getIndex() - _startIndex, getFrame() + config.rollbackDelay, input);
+        }
+    }
     else
     {
         _inputs[player - 1].set ( getIndex() - _startIndex, getFrame() + config.delay, input );
